--- a/ShoppingList/Base.lproj/Main.storyboard
+++ b/ShoppingList/Base.lproj/Main.storyboard
@@ -187,28 +187,28 @@
                                 </connections>
                             </stepper>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="3VG-FR-m77">
-                                <rect key="frame" x="26" y="747" width="145" height="30"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="26" y="747" width="145" height="50"/>
+                                <color key="backgroundColor" red="0.56470588235294117" green="0.792156862745098" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="145" id="NgG-c9-4EK"/>
-                                    <constraint firstAttribute="height" constant="30" id="V3z-Ws-Ksi"/>
+                                    <constraint firstAttribute="height" constant="50" id="VzZ-l5-96a"/>
                                 </constraints>
                                 <state key="normal" title="Save">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="saveList:" destination="BYZ-38-t0r" eventType="touchUpInside" id="M2V-TT-UrT"/>
                                 </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="oSG-9b-27s">
-                                <rect key="frame" x="229" y="747" width="145" height="30"/>
-                                <color key="backgroundColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <rect key="frame" x="229" y="747" width="145" height="50"/>
+                                <color key="backgroundColor" red="0.56470588235294117" green="0.792156862745098" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstAttribute="height" constant="50" id="eod-F5-WVW"/>
                                     <constraint firstAttribute="width" constant="145" id="o19-xM-3hJ"/>
-                                    <constraint firstAttribute="height" constant="30" id="zFj-Pp-Rbi"/>
                                 </constraints>
                                 <state key="normal" title="Cancel">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                    <color key="titleColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                                 <connections>
                                     <action selector="clearScreen:" destination="BYZ-38-t0r" eventType="touchUpInside" id="f6D-Kd-vFv"/>
@@ -255,7 +255,7 @@
                             </label>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.8901960784313725" green="0.94901960784313721" blue="0.99215686274509807" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="t57-YU-uY6" firstAttribute="leading" secondItem="sgg-5G-rLB" secondAttribute="trailing" constant="29" id="0Qz-KB-fqb"/>
                             <constraint firstItem="oSG-9b-27s" firstAttribute="width" secondItem="3VG-FR-m77" secondAttribute="width" id="1I4-yb-8vg"/>
